force-app/main/default/objects/SCC_Announcement__c/SCC_Announcement__c.object-meta.xml
<CustomObject>
    <description>Object to create announcements for conveying information to a group of people.</description>
    <label>Announcement</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Announcement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>