force-app/main/default/objects/SCC_Announcement__c/fields/SCC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SCC_End_Date__c</fullName>
    <description>Field to capture end date of the Announcement.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>