force-app/main/default/objects/SCC_Announcement__c/fields/SCC_Message__c.field-meta.xml
<CustomField>
    <fullName>SCC_Message__c</fullName>
    <description>Field to capture message to show to the end user of the Announcement.</description>
    <label>Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>