force-app/main/default/objects/SCC_Announcement__c/fields/SCC_Priority__c.field-meta.xml
<CustomField>
    <fullName>SCC_Priority__c</fullName>
    <description>This field is used to set priority by Data admininstrator.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - High Priority</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Medium Priority</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Low Priority</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>