force-app/main/default/objects/SCC_Announcement__c/fields/SCC_Status__c.field-meta.xml
<CustomField>
    <fullName>SCC_Status__c</fullName>
    <description>Field to capture Active, Inactive status of the Announcement.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>