force-app/main/default/objects/SCC_Announcement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SCC_Message__c</columns>
    <columns>SCC_Start_Date__c</columns>
    <columns>SCC_End_Date__c</columns>
    <columns>SCC_Status__c</columns>
    <columns>SCC_Knowledge_Article__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>